:technologist: Arreglo de enlaces imagenes

--- a/contenido/pag02.html
+++ b/contenido/pag02.html
@@ -9,7 +9,7 @@
 <body>
     <div id="intro02">
         <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag02/Personaje.svg" alt="Personaje">
+            <img src="../build/img/contenido/Pag02/Personaje.svg" alt="Personaje">
         </figure>
         <div id="cont-parrafo">
             <div id="globo02" class="contenedor">
@@ -26,7 +26,7 @@
                 </div>
                 <div id="cont-info1" class="cont-info">
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag02/Gafi.svg" alt="Gafi">
+                        <img src="../build/img/contenido/Pag02/Gafi.svg" alt="Gafi">
                     </figure>
                     <p>
                         México es miembro del Grupo de Acción financiera Internacional (GAFI).
@@ -78,7 +78,7 @@
                 </div>
                 <div id="cont-info3" class="cont-info">
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag02/Mazo.svg" alt="Mazo">
+                        <img src="../build/img/contenido/Pag02/Mazo.svg" alt="Mazo">
                     </figure>
                     <p>
                         Entró en vigor la Ley de Instituciones de Seguros y Finanzas (LISF).
@@ -105,7 +105,7 @@
                 </div>
                 <div id="cont-info4" class="cont-info">
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag02/Gafi.svg" alt="Mazo">
+                        <img src="../build/img/contenido/Pag02/Gafi.svg" alt="Mazo">
                     </figure>
                     <p>
                         La GAFI emite recomendaciones con motivo de la evaluación mutua.
@@ -132,7 +132,7 @@
                 </div>
                 <div id="cont-info5" class="cont-info">
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag02/Pergamino.svg" alt="Mazo">
+                        <img src="../build/img/contenido/Pag02/Pergamino.svg" alt="Mazo">
                     </figure>
                     <p>
                         Publicación de las disposiciones de carácter general del art. 492 de la LISF, que dejaron sin vigor a las Disposiciones de Carácter General del art. 140 LGISMS.
