--- a/contenido/pag04.html
+++ b/contenido/pag04.html
@@ -11,7 +11,7 @@
         <div id="cont-instrucciones">
             <div id="mensaje">
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag04/Persona.svg" alt="Persona">
+                    <img src="../build/img/contenido/Pag04/Persona.svg" alt="Persona">
                 </figure>
                 <div id="globo">
                     <p>
@@ -21,7 +21,7 @@
             </div>
             <div id="instrucciones">
                 <figure id="mano">
-                    <img src="./build/img/contenido/Pag04/Mano.svg" alt="Mano">
+                    <img src="../build/img/contenido/Pag04/Mano.svg" alt="Mano">
                 </figure>
                 <p>Da clic en cada obligación para conocer más detalles.</p>
             </div>
@@ -31,7 +31,7 @@
             
 
             <figure id="circulo-central">
-                <img src="./build/img/contenido/Pag04/CirculoAzul.svg" alt="Circulo">
+                <img src="../build/img/contenido/Pag04/CirculoAzul.svg" alt="Circulo">
             </figure>
 
             <div id="contenedor-info04">
