--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -15,11 +15,11 @@
             <div id="clic-pag06">
                 <p>Clic en cada botón para conocer más detalles.</p>
                 <figure class="mano-pag06">
-                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                    <img src="../build/img/contenido/Pag06/mano.svg" alt="mano">
                 </figure>
             </div>
             <figure class="personaje">
-                <img src="./build/img/contenido/Pag06/personaje.svg" alt="personaje">
+                <img src="../build/img/contenido/Pag06/personaje.svg" alt="personaje">
             </figure>
         </div>
         <div id="cont-rosa">
@@ -27,7 +27,7 @@
                 <div id="libro1">
                     <a class="btn-pag06" href="#cuadro1">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro1.svg" alt="libro1">
+                            <img src="../build/img/contenido/Pag06/libro1.svg" alt="libro1">
                         </figure>
                     </a>
                     <div class="cuadro-pag06" id="cuadro1">
@@ -42,7 +42,7 @@
                 <div id="libro2">
                     <a class="btn-pag06" href="#cuadro2">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro2.svg" alt="libro2">
+                            <img src="../build/img/contenido/Pag06/libro2.svg" alt="libro2">
                         </figure>
                     </a>
                     <div class="cuadro-pag06" id="cuadro2">
@@ -60,7 +60,7 @@
                 <div id="libro3">
                     <a class="btn-pag06" href="#cuadro3">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro3.svg" alt="libro3">
+                            <img src="../build/img/contenido/Pag06/libro3.svg" alt="libro3">
                         </figure>
                     </a>
                     <div class ="cuadro-pag06" id="cuadro3">
