--- a/contenido/pag08.html
+++ b/contenido/pag08.html
@@ -12,7 +12,7 @@
 
         <div id="cont-mensaje08_1">
             <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag08/Persona1.svg" alt="persona">
+                <img src="../build/img/contenido/Pag08/Persona1.svg" alt="persona">
             </figure>
             <div id="mensaje1">
                 <div class="caja">
@@ -35,7 +35,7 @@
                     </h4>
                     <div id="contenido">
                         <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag08/Señal.svg" alt="señal">
+                            <img src="../build/img/contenido/Pag08/Señal.svg" alt="señal">
                         </div>
                         <div id="alerta-mensaje">
                             <h4>Nota:</h4>
@@ -56,7 +56,7 @@
                     </p>
                 </div>
                 <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag08/Persona2.svg" alt="persona">
+                    <img src="../build/img/contenido/Pag08/Persona2.svg" alt="persona">
                 </div>
             </div>
         </div>
