--- a/contenido/pag09.html
+++ b/contenido/pag09.html
@@ -9,7 +9,7 @@
 <body>
     <div id="cont-pag09">
         <figure id="persona" class="cont-imagen">
-            <img src="./build/img/contenido/Pag09/persona.svg" alt="persona">
+            <img src="../build/img/contenido/Pag09/persona.svg" alt="persona">
         </figure>
         <div class="hojas09" id="hoja09_1">
             <div class="puntos09">
@@ -17,7 +17,7 @@
                     Al menos una vez al año las entidades deben identificar que los expedientes clasificados como ALTO RIESGO estén completos.
                 </p>
                 <figure class="contimagen">
-                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                    <img src="../build/img/contenido/Pag09/paloma.svg" alt="paloma">
                 </figure>
             </div>
             <div class="puntos09">
@@ -25,7 +25,7 @@
                     Si durante la relación comercial se detectan cambios significativos en el comportamiento transaccional, sin que exista causa justificada o surgen dudas sobre la veracidad o exactitud de los datos o documentos, se reclasifica al cliente como de grado de riesgo superior. Al analizarlo se deberá verificar y solicitar la actualización de sus datos y documentos.
                 </p>
                 <figure class="contimagen">
-                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                    <img src="../build/img/contenido/Pag09/paloma.svg" alt="paloma">
                 </figure>
             </div>
             <div class="puntos09">
@@ -34,7 +34,7 @@
 
                 </p>
                 <figure class="contimagen">
-                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                    <img src="../build/img/contenido/Pag09/paloma.svg" alt="paloma">
                 </figure>
             </div>
         </div>
@@ -54,7 +54,7 @@
                 </div>
 
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                    <img src="../build/img/contenido/Pag09/paloma.svg" alt="paloma">
                 </figure>
             </div>
 
@@ -72,7 +72,7 @@
                 </div>
 
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                    <img src="../build/img/contenido/Pag09/paloma.svg" alt="paloma">
                 </figure>
             </div>
         </div>
