--- a/contenido/pag12.html
+++ b/contenido/pag12.html
@@ -13,11 +13,11 @@
     <div id="pag12">
         <div id="cont-01">
             <figure class="personaje">
-                <img src="./build/img/contenido/Pag12/personaje.svg" alt="Personaje">
+                <img src="../build/img/contenido/Pag12/personaje.svg" alt="Personaje">
             </figure>
             <span id="clic1-pag12">
                 <figure class="mano1-pag12">
-                    <img src="./build/img/contenido/Pag12/mano.svg" alt="mano">
+                    <img src="../build/img/contenido/Pag12/mano.svg" alt="mano">
                 </figure>
                 <p>Da clic en cada botón para conocer más detalles.</p>
             </span>
@@ -65,7 +65,7 @@
     <div id="pag12-2">
         <div id="cont-01">
             <figure class="personaje-2">
-                <img src="./build/img/contenido/Pag12/personaje2.svg" alt="Personaje">
+                <img src="../build/img/contenido/Pag12/personaje2.svg" alt="Personaje">
             </figure>
             <div id="globo-2">
                 Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
@@ -74,7 +74,7 @@
             </div>
             <div id="clic2-pag12">
                 <figure class="mano2-pag12">
-                    <img src="./build/img/contenido/Pag12/mano.svg" alt="mano">
+                    <img src="../build/img/contenido/Pag12/mano.svg" alt="mano">
                 </figure>
                 <p>Da clic en cada botón para conocer más detalles.</p>
             </div>
@@ -86,7 +86,7 @@
                         <h3>Aseguradora</h3>
                     </div>
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag12/flip-card01.svg" alt="Flip Card">
+                        <img src="../build/img/contenido/Pag12/flip-card01.svg" alt="Flip Card">
                     </figure>
                 </div>
                 <div class="back caras">
@@ -106,7 +106,7 @@
                         <h3>Transacciones</h3>
                     </div>
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag12/flip-card02.svg" alt="lupa">
+                        <img src="../build/img/contenido/Pag12/flip-card02.svg" alt="lupa">
                     </figure>
                 </div>
                 <div class="back caras">
