--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -9,7 +9,7 @@
 <body>
     <div id="intro-pag13">
         <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag13/Persona.svg" alt="Persona">
+            <img src="../build/img/contenido/Pag13/Persona.svg" alt="Persona">
         </figure>
         <div id="cont-obligaciones">
             <p>Otra de las obligaciones establecidas en las DCG, es contar con Estructuras Internas para cumplir y hacer cumplir las obligaciones en materia de PLD y CFT, específicamente se refiere a las dos siguientes:</p>
@@ -21,12 +21,12 @@
     <div id="cont-comite">
         <!-- <div class="instrucciones-mano">
             <div class="cont-imagen">
-                <img src="./build/img/contenido/Pag13/Mano.svg" alt="mano">
+                <img src="../build/img/contenido/Pag13/Mano.svg" alt="mano">
             </div>
             <p>Da clic en las flechas para conocer las funciones del comité.</p>
         </div> -->
         <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag13/Personas.svg" alt="Personas">
+            <img src="../build/img/contenido/Pag13/Personas.svg" alt="Personas">
         </figure>
         <div id="definicion">
             <p>Comité de Comunicación y Control.</p>
@@ -85,10 +85,10 @@
         <div id="contenedor-info">
             <div id="cont-funciones">
                 <div class="cont-imagen" id="t1">
-                    <img src="./build/img/contenido/Pag13/Persona_tablet.svg" alt="persona">
+                    <img src="../build/img/contenido/Pag13/Persona_tablet.svg" alt="persona">
                 </div>
                 <div class="cont-imagen" id="t2">
-                    <img src="./build/img/contenido/Pag13/Persona-tablet2.svg" alt="persona">
+                    <img src="../build/img/contenido/Pag13/Persona-tablet2.svg" alt="persona">
                 </div>
                 <div id="fn-intro">
                     <p class="parrafos" id="principal">Es el funcionario designado por el Consejo de Administración de la Compañía, él:</p>
