--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -28,12 +28,12 @@
                 </div>
             </div>
             <figure class="cont-imagen" id="imgPersona">
-                <img src="./build/img/contenido/Pag14/persona.svg" alt="persona">
+                <img src="../build/img/contenido/Pag14/persona.svg" alt="persona">
             </figure>
             <div id="cont-mano">
                 <div class="instrucciones-mano">
                     <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag14/Mano.svg" alt="mano">
+                        <img src="../build/img/contenido/Pag14/Mano.svg" alt="mano">
                     </figure>
                     <p>Da clic en cada botón para conocer más funciones de los sistemas automatizados.</p>
                 </div>
@@ -44,52 +44,52 @@
             <!-- <div class="cont-computadoras"> -->
                 <figure id="pc-1" class="cont-imagen">
                     <a href="#info1" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-verde.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-verde.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-2" class="cont-imagen">
                     <a href="#info2" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-3" class="cont-imagen">
                     <a href="#info3" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-azul.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-azul.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-4" class="cont-imagen">
                     <a href="#info4" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-5" class="cont-imagen">
                     <a href="#info5" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-gris.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-gris.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-6" class="cont-imagen">
                     <a href="#info6" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-azulRey.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-azulRey.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-7" class="cont-imagen">
                     <a href="#info7" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-8" class="cont-imagen">
                     <a href="#info8" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-azul.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-azul.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-9" class="cont-imagen">
                     <a href="#info9" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
                     </a>
                 </figure>
                 <figure id="pc-10" class="cont-imagen">
                     <a href="#info10" class="btn-pc">
-                        <img src="./build/img/contenido/Pag14/pc-verde.svg" alt="pc">
+                        <img src="../build/img/contenido/Pag14/pc-verde.svg" alt="pc">
                     </a>
                 </figure>
                 <div id="info-computadoras">
@@ -151,7 +151,7 @@
            <div class="cont-botones-info" id="cont-info1">
                <a href="#info-m1" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane1">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m1">
@@ -163,7 +163,7 @@
            <div class="cont-botones-info" id="cont-info2">
                <a href="#info-m2" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane2">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m2">
@@ -175,7 +175,7 @@
            <div class="cont-botones-info" id="cont-info3">
                <a href="#info-m3" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane3">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m3">
@@ -187,7 +187,7 @@
            <div class="cont-botones-info" id="cont-info4">
                <a href="#info-m4" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane4">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m4">
@@ -199,7 +199,7 @@
            <div class="cont-botones-info" id="cont-info5">
                <a href="#info-m5" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane5">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m5">
@@ -211,7 +211,7 @@
            <div class="cont-botones-info" id="cont-info6">
                <a href="#info-m6" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane6">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m6">
@@ -223,7 +223,7 @@
            <div class="cont-botones-info" id="cont-info7">
                <a href="#info-m7" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane7">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m7">
@@ -235,7 +235,7 @@
            <div class="cont-botones-info" id="cont-info8">
                <a href="#info-m8" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane8">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m8">
@@ -247,7 +247,7 @@
            <div class="cont-botones-info" id="cont-info9">
                <a href="#info-m9" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane9">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m9">
@@ -259,7 +259,7 @@
            <div class="cont-botones-info" id="cont-info10">
                <a href="#info-m10" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane10">
-                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="../build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
             <div class="cuadros-info-movil" id="info-m10">
