--- a/contenido/pag15.html
+++ b/contenido/pag15.html
@@ -11,14 +11,14 @@
 <body>
     <!-- <div id="instrucciones">
         <figure class="mano">
-            <img src="./build/img/contenido/Pag15/mano.svg" alt="Mano">
+            <img src="../build/img/contenido/Pag15/mano.svg" alt="Mano">
         </figure>
         <p>Da clic en cada colega para conocer más detalles sobre tus deberes de confidencialidad.</p>
     </div> -->
     <div id="cont-verde">
         <a class="btn_cuadros12" href="#globo1">
             <figure class="personaje1">
-                <img src="./build/img/contenido/Pag15/personaje1.svg" alt="Personaje">
+                <img src="../build/img/contenido/Pag15/personaje1.svg" alt="Personaje">
             </figure>
         </a>
         <div class ="globos12" id="globo1">
@@ -31,7 +31,7 @@
         <div id="cont-azul">
             <a class="btn_cuadros12" href="#globo2">
                 <figure class="personaje2">
-                    <img src="./build/img/contenido/Pag15/personaje3.svg" alt="Personaje">
+                    <img src="../build/img/contenido/Pag15/personaje3.svg" alt="Personaje">
                 </figure>
             </a>
             <div class ="globos12" id="globo2">
@@ -54,13 +54,13 @@
                 </div>
                 <a class="btn_cuadros12" href="#globo3">
                     <figure class="personaje3">
-                        <img src="./build/img/contenido/Pag15/personaje2.svg" alt="Personaje">
+                        <img src="../build/img/contenido/Pag15/personaje2.svg" alt="Personaje">
                     </figure>
                 </a>
             </div>
             <div id="cont-rojo">
                 <figure class="warning">
-                    <img src="./build/img/contenido/Pag15/warning.svg" alt="Warning">
+                    <img src="../build/img/contenido/Pag15/warning.svg" alt="Warning">
                 </figure>
                 <p>El incumplimiento de lo señalado en los numerales 1 y 2 puede derivar en la aplicación
                     de medidas disciplinarias.</p>
