--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -13,7 +13,7 @@
         <div id="cont-izquierda">
             <div id="cont-img">
                 <figure class="personaje">
-                    <img src="./build/img/contenido/Pag16/personaje.svg" alt="Personaje">
+                    <img src="../build/img/contenido/Pag16/personaje.svg" alt="Personaje">
                 </figure>
                 <div id="globo1">
                     <p>
@@ -43,7 +43,7 @@
             </div>
             <div id="clic-pag16">
                 <figure class="mano-pag16">
-                    <img src="./build/img/contenido/Pag16/mano.svg" alt="Mano">
+                    <img src="../build/img/contenido/Pag16/mano.svg" alt="Mano">
                 </figure>
                 <p>Da clic en cada botón para conocerlas:</p>
             </div>
