--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -12,7 +12,7 @@
 <body>
     <div id="cont1-pag17">
         <figure class="img-personaje1">
-            <img src="./build/img/contenido/Pag17/persona1.svg" alt="persona 1">
+            <img src="../build/img/contenido/Pag17/persona1.svg" alt="persona 1">
         </figure>
         <div id="text-personaje1">La Metodología de Evaluación de Riesgos, nos permite entender cómo y hasta qué punto
             somos
@@ -25,13 +25,13 @@
     <div id="cont2-pag17">
         <div id="cont-graficaPastel">
             <figure class="img-grafica">
-                <img src="./build/img/contenido/Pag17/grafica-pastel.svg" alt="Grafica Pastel">
+                <img src="../build/img/contenido/Pag17/grafica-pastel.svg" alt="Grafica Pastel">
             </figure>
         </div>
         <div id="cont-buzon">
             <div id="buzon">
                 <figure class="img-buzon">
-                    <img src="./build/img/contenido/Pag17/buzon.svg" alt="Buzon">
+                    <img src="../build/img/contenido/Pag17/buzon.svg" alt="Buzon">
                 </figure>
                 <span id="text-buzon">Buzón de Denuncia y correo del Oficial de Cumplimiento</span>
             </div>
@@ -44,7 +44,7 @@
                     de forma aislada o reiterada.
                 </span>
                 <figure class="img-personaje2">
-                    <img src="./build/img/contenido/Pag17/persona2.svg" alt="Personaje 2">
+                    <img src="../build/img/contenido/Pag17/persona2.svg" alt="Personaje 2">
                 </figure>
             </div>
         </div>
@@ -52,7 +52,7 @@
 
     <div id="cont3-pag17">
         <figure class="img-personaje3">
-            <img src="./build/img/contenido/Pag17/persona-computadora.svg" alt="Personaje 3">
+            <img src="../build/img/contenido/Pag17/persona-computadora.svg" alt="Personaje 3">
         </figure>
         <div id="text-personaje3">
             En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para
@@ -63,7 +63,7 @@
 
     <div id="instrucciones-pag17">
         <figure class="img-clic">
-            <img src="./build/img/contenido/Pag17/i-click.svg" alt="Clic">
+            <img src="../build/img/contenido/Pag17/i-click.svg" alt="Clic">
         </figure>
         <p>Para conocer qué situaciones o conductas son tu deber reportar al General de Seguros/ General de Salud o
             Patria, deslízate con las flechas de izquierda y derecha.
@@ -81,7 +81,7 @@
                             para la contratación.
                         </div>
                         <figure class="img-slide">
-                            <img src="./build/img/contenido/Pag17/slide1.svg" alt="slide 1">
+                            <img src="../build/img/contenido/Pag17/slide1.svg" alt="slide 1">
                         </figure>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             Políticas Internas.
                         </div>
                         <figure class="img-slide">
-                            <img src="./build/img/contenido/Pag17/slide2.svg" alt="slide 2">
+                            <img src="../build/img/contenido/Pag17/slide2.svg" alt="slide 2">
                         </figure>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             La apariencia del cliente o su domicilio no concuerdan con la información.
                         </div>
                         <figure class="img-slide">
-                            <img src="./build/img/contenido/Pag17/slide3.svg" alt="slide 3">
+                            <img src="../build/img/contenido/Pag17/slide3.svg" alt="slide 3">
                         </figure>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                             La apariencia del cliente o su domicilio no concuerdan con la información.
                         </div>
                         <figure class="img-slide">
-                            <img src="./build/img/contenido/Pag17/slide4.svg" alt="slide 4">
+                            <img src="../build/img/contenido/Pag17/slide4.svg" alt="slide 4">
                         </figure>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             La apariencia del cliente o su domicilio no concuerdan con la información.
                         </div>
                         <figure class="img-maletin">
-                            <img src="./build/img/contenido/Pag17/slide5.svg" alt="slide 5">
+                            <img src="../build/img/contenido/Pag17/slide5.svg" alt="slide 5">
                         </figure>
                     </div>
                 </div>
