--- a/contenido/pag22.html
+++ b/contenido/pag22.html
@@ -16,7 +16,7 @@
     </div>
     <div class="instrucciones-mano mano22">
         <figure class="cont-imagen">
-            <img src="./build/img/contenido/Pag22/Mano.svg" alt="mano">
+            <img src="../build/img/contenido/Pag22/Mano.svg" alt="mano">
         </figure>
         <p>Pulsa en cada etapa para conocer más.</p>
     </div>
@@ -56,7 +56,7 @@
     <div id="actividad-relacion22">
         <div class="instrucciones-mano">
             <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag22/Mano.svg" alt="mano">
+                <img src="../build/img/contenido/Pag22/Mano.svg" alt="mano">
             </figure>
             <p id="parrafo1">Relaciona cada concepto con la etapa del ciclo del Lavado de Dinero que le corresponde</p>
             <p id="parrafo2">Selecciona el ciclo del Lavado de Dinero que corresponde a cada concepto.
