--- a/contenido/pag27.html
+++ b/contenido/pag27.html
@@ -10,7 +10,7 @@
     <div id="cont-evaluacion">
         <div id="intro-evaluacion">
             <div class="cont-imagen">
-                <img src="./build/img/contenido/Pag27/mujer.svg" alt="mujer">
+                <img src="../build/img/contenido/Pag27/mujer.svg" alt="mujer">
             </div>
             <div class="cont-mensaje">
                 <p>Hemos llegado a la Evaluación Final del curso.</p>
@@ -28,7 +28,7 @@
         <div id="cont-preguntas">
             <div id="instruccion">
                 <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag27/Mano.svg" alt="mano">
+                    <img src="../build/img/contenido/Pag27/Mano.svg" alt="mano">
                 </div>
                 <div id="parrafo">
                     <p>Selecciona el inciso que consideres correcto.</p>
@@ -51,7 +51,7 @@
 
             <div class="final">
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag27/personas-medalla.svg" alt="medalla">
+                    <img src="../build/img/contenido/Pag27/personas-medalla.svg" alt="medalla">
                 </figure>
                 <div class="cont-info">
                     <div class="parrafo">
@@ -72,7 +72,7 @@
             </div>
             <div class="final">
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag27/chica.svg" alt="chica">
+                    <img src="../build/img/contenido/Pag27/chica.svg" alt="chica">
                 </figure>
                 <div class="botones">
                     <a href="" id="reintentar">Reintentar</a>
