--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -11,7 +11,7 @@
 <body>
     <div id="cont-intro5">
         <div class="cont-imagen">
-            <img src="./build/img/contenido/Pag05/Persona.svg" alt="Persona">
+            <img src="../build/img/contenido/Pag05/Persona.svg" alt="Persona">
         </div>
         <div id="mensaje-intro5">
             <p>
@@ -45,7 +45,7 @@
                 </div>
 
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag05/medidor.svg" alt="medidor">
+                    <img src="../build/img/contenido/Pag05/medidor.svg" alt="medidor">
                 </figure>
             </div>
         </div>
@@ -57,49 +57,49 @@
                 <div id="cont-grid">
                     <div class="cajas" id="antecedentes">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Huella.svg" alt="Huella">
+                            <img src="../build/img/contenido/Pag05/Huella.svg" alt="Huella">
                         </figure>
                         <p>Antecedentes</p>
                     </div>
                     <div class="cajas" id="tipo-personas">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Personas.svg" alt="Personas">
+                            <img src="../build/img/contenido/Pag05/Personas.svg" alt="Personas">
                         </figure>
                         <p>Tipo de persona</p>
                     </div>
                     <div class="cajas" id="fecha">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Calendario.svg" alt="Calendario">
+                            <img src="../build/img/contenido/Pag05/Calendario.svg" alt="Calendario">
                         </figure>
                         <p>Fecha de nacimiento o constitución</p>
                     </div>
                     <div class="cajas" id="giro">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Graduado.svg" alt="Graduado">
+                            <img src="../build/img/contenido/Pag05/Graduado.svg" alt="Graduado">
                         </figure>
                         <p>Giro o actividad</p>
                     </div>
                     <div class="cajas" id="nacionalidad">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Bandera.svg" alt="Bandera">
+                            <img src="../build/img/contenido/Pag05/Bandera.svg" alt="Bandera">
                         </figure>
                         <p>Nacionalidad</p>
                     </div>
                     <div class="cajas" id="residencia">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Casa.svg" alt="Casa">
+                            <img src="../build/img/contenido/Pag05/Casa.svg" alt="Casa">
                         </figure>
                         <p>Lugar de residencia</p>
                     </div>
                     <div class="cajas" id="ingreso">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Billete.svg" alt="Billete">
+                            <img src="../build/img/contenido/Pag05/Billete.svg" alt="Billete">
                         </figure>
                         <p>Fuentes de ingreso</p>
                     </div>
                     <div class="cajas" id="operacion">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag05/Punteria.svg" alt="operacion">
+                            <img src="../build/img/contenido/Pag05/Punteria.svg" alt="operacion">
                         </figure>
                         <p>Propósito de la operación</p>
                     </div>
@@ -110,7 +110,7 @@
 
     <div id="cont-mensaje05_2">
         <div class="cont-imagen">
-            <img src="./build/img/contenido/Pag05/Persona2.svg" alt="persona">
+            <img src="../build/img/contenido/Pag05/Persona2.svg" alt="persona">
         </div>
 
         <div id="mensaje05_2">
