--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -15,14 +15,14 @@
                 </div>
             </div>
             <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag24/mujer.svg" alt="mujer">
+                <img src="../build/img/contenido/Pag24/mujer.svg" alt="mujer">
             </figure>
         </div>
 
         <div id="cont-info24">
             <div class="indicaciones">
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag24/Mano.svg" alt="mano">
+                    <img src="../build/img/contenido/Pag24/Mano.svg" alt="mano">
                 </figure>
                 <div class="parrafos">
                     <p>A continuación encontrarás algunos delitos previos al delito de Lavado de Dinero.
@@ -35,7 +35,7 @@
                 <div class="flipcard" id="flip1">
                     <div class="front caras">
                         <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                            <img src="../build/img/contenido/Pag24/preso.svg" alt="preso">
                         </div>
                     </div>
                     <div class="back caras">
@@ -46,7 +46,7 @@
                 <div class="flipcard" id="flip2">
                     <div class="front caras">
                         <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                            <img src="../build/img/contenido/Pag24/preso.svg" alt="preso">
                         </div>
                     </div>
                     <div class="back caras">
@@ -56,7 +56,7 @@
                 <div class="flipcard" id="flip3">
                     <div class="front caras">
                         <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                            <img src="../build/img/contenido/Pag24/preso.svg" alt="preso">
                         </div>
                     </div>
                     <div class="back caras">
@@ -66,7 +66,7 @@
                 <div class="flipcard" id="flip4">
                     <div class="front caras">
                         <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                            <img src="../build/img/contenido/Pag24/preso.svg" alt="preso">
                         </div>
                     </div>
                     <div class="back caras">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag24/hombre.svg" alt="hombre">
+                    <img src="../build/img/contenido/Pag24/hombre.svg" alt="hombre">
                 </figure>
             </div>
         </div>        
@@ -99,7 +99,7 @@
                     <h3>Lavado de Dinero</h3>
                 </div>
                 <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag24/soborno.svg" alt="soborno">
+                    <img src="../build/img/contenido/Pag24/soborno.svg" alt="soborno">
                 </div>
             </div>
             <div class="lista-info">
@@ -126,7 +126,7 @@
                     <h3>Financiamiento al Terrorismo</h3>
                 </div>
                 <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag24/terrorista.svg" alt="terrorista">
+                    <img src="../build/img/contenido/Pag24/terrorista.svg" alt="terrorista">
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
 
     <div id="cont-final24">
         <div class="cont-imagen">
-            <img src="./build/img/contenido/Pag24/mujer-noticia.svg" alt="noticia">
+            <img src="../build/img/contenido/Pag24/mujer-noticia.svg" alt="noticia">
         </div>
 
         <div class="cont-globo">
